AUT-4574: Organise CheckReAuthUserHandlerIntegrationTest
Using nested classes to add some organisation for the tests in the file